first selenium test and proper addding new users to database